로그인 JWT 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 logging.level.org.springframework.security=DEBUG
+
+jwt.secret=0a6aee33-5845-4bc8-89be-a1fdef8c35e0
+jwt.expiration=3600000
