--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,15 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
-    }
+}
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+test {
+    testLogging {
+        showStandardStreams = true
+        events "passed", "failed", "skipped"
+    }
 }
