--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+server:
+  port: 8080
+  address: 0.0.0.0
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/user?useSSL=false&serverTimezone=Asia/Seoul
