--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+
+    //Redis
+    implementation "org.redisson:redisson-spring-boot-starter:3.52.0"
+    implementation "org.springframework.boot:spring-boot-starter-data-redis"
 }
 
 tasks.named('test') {
